# dummy_router_generator

./: README.md  input.csv  pyproject.toml  requirements.txt  router.db
src/: main.py
src/app/: router_app.py
src/models/: row_model.py
src/services/: generator.py
src/utils/: csv_utils.py
tests/app/: test_router_app.py
tests/models/: test_row_model.py
tests/services/: test_generator.py
tests/utils/: test_csv_utils.py
